<!--
  ~ MrRobotto Engine
  ~ Copyright (c) 2015, Aarón Negrín, All rights reserved.
  ~
  ~ This Source Code Form is subject to the terms of the Mozilla Public
  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
  ~ file, You can obtain one at http://mozilla.org/MPL/2.0/.
  -->

<resources>
    <string name="app_name">MrRobotto Studio</string>

    <string name="action_settings">Settings</string>
    <string name="port">Port</string>
    <string name="host">Host</string>
    <string name="connect">Connect</string>
    <string name="refresh">Refresh</string>
    <string name="default_port">8000</string>
    <string name="default_ip_base">192.168.1.</string>
    <string name="qr_register">QR Registration</string>
    <string name="manual_register">Register Device</string>
    <string name="registerdevice">Register Device</string>

    <string name="title_section_connect">Connect</string>
    <string name="title_section_register">Register Device</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="password">Password</string>
    <string name="url">URL</string>
    <string name="username">Username</string>
    <string name="start_qr">Stop QR Scanner</string>
    <string name="stop_qr">Start QR Scanner</string>

</resources>
